fixed notfound, added color behind posts, added box-shadow for form and added some media queries for font sizes,

--- a/dev/styles/components/_content.scss
+++ b/dev/styles/components/_content.scss
@@ -1,9 +1,19 @@
-// .column {
-//     background: $white;
-// }
+.column, .notFound {
+    margin: 0 auto;
+    text-align:center;
+    h2 {
+        text-transform: capitalize;
+        font-size: 2.5rem;
+        margin: 0;
+        padding: 0;
+        @media (min-width: 1000px) {
+            font-size: 3rem;
+        }
+    }
+}
+
 .postContainer {
     width: 75%;
-    // height: 150px;
     margin: 25px auto;
     margin-bottom: 25px;
     display: flex;
@@ -11,8 +21,25 @@
     justify-content: center;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 
     0 6px 6px rgba(0,0,0,0.23);
+    h3 {
+        font-size: 1.5rem;
+        @media (min-width: 1000px) {
+            font-size: 2rem;
+        }
+    }
 }
 
+#reddit {
+    background: $reddit;
+}
+
+#giphy {
+    background: $giphy;
+}
+
+#pixabay {
+    background: $pixa;
+}
 .imageContainer,
 .titleContainer {
     margin: 0 auto;
@@ -27,4 +54,15 @@
 .titleContainer { 
     text-transform: capitalize;
     padding: 0 20px;
+}
+
+.postContainer#pixabay .imageContainer{
+    width: 100%;
+    margin: 0 auto;
+    img {
+        // margin: 0 auto;
+        // text-align: center;
+        display: block;
+        transform:translateX(25%)
+    }
 }
