--- a/dev/styles/components/_form.scss
+++ b/dev/styles/components/_form.scss
@@ -28,7 +28,14 @@
     input,
     button {
         height: 40px;
-        font-size: 1.5rem;
         font-weight: 700;
+        font-size: 1.5rem;
+        &:focus,
+        &:hover {
+            box-shadow: 0px 0px 5px $giphy;
+        }
+        @media (min-width: 1000px){
+            font-size: 2rem;
+        }
     }
 }
