--- a/dev/styles/components/_nav.scss
+++ b/dev/styles/components/_nav.scss
@@ -10,13 +10,22 @@
         padding: 0;
         margin:0;
         a {
+            text-align: center;
             color: $black;
             text-decoration: none;
             display:block;
             padding: 20px 10px;
-            box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22); 
             clip-path:polygon(0 34%, 100% 1%, 100% 100%, 0 68%);
             -webkit-clip-path: polygon(0 34%, 100% 1%, 100% 100%, 0 68%);
+            box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22); 
+            font-size: 1rem;
+            @media (min-width: 500px) {
+                font-size: 1.5rem;
+            }
+            @media (min-width: 1000px) {
+                font-size: 2rem;
+                padding: 30px 15px;
+            }
         }
     }
 
